# PasswordVault

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  commands.rs  crypto.rs  generator.rs  importer.rs  lib.rs  main.rs  vault.rs
src/components/: ConfirmDialog.tsx  EntryDetail.tsx  EntryList.tsx  GeneratorModal.tsx  ImportModal.tsx  SettingsModal.tsx  Sidebar.tsx  UnlockScreen.tsx  VaultView.tsx
src/store/: themeStore.ts  vaultStore.ts
src/types/: index.ts
