[package]
name = "password-vault"
version = "0.1.0"
edition = "2021"
rust-edition = "2021"

[lib]
name = "password_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
thiserror = "1"

csv = "1"
zip = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
